--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 :root {
-  --primary-color: #357b70;
+  --primary-color: #269393;
   --secondary-color: #e0b354;
   --bottom-border: #2b2b2b;
   --color-visited: #008080;
