Updates mouse pointer on hover

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ a {
 a:hover, a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
+  cursor: pointer;
   opacity: 0.8;
 }
 
