--- a/css/style.production.css
+++ b/css/style.production.css
@@ -47,6 +47,7 @@ a {
 a:hover, a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
+  cursor: pointer;
   opacity: 0.8;
 }
 
