--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   --bottom-border: #2b2b2b;
   --color-visited: #008080;
   --color-active: #40e0d0;
-  --grid-color: #b2d9d9;
+  --grid-color: #008080;
   --background-color: #fff;
   --table-border: #000;
   --color-change1: #edc655;
@@ -32,6 +32,7 @@ body {
   /* Sets the font size to 16px */
   line-height: 1.6;
   /* Sets the line-height to 1.6 */
+  background-image: linear-gradient(to right, #f2d9bf, #f7e6d4);
 }
 
 /* title specs */
@@ -61,6 +62,7 @@ a:hover, a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
   opacity: 0.8;
+  cursor: pointer;
 }
 
 a:visited {
@@ -84,11 +86,11 @@ a:active {
   background-color: var(--primary-color);
   color: var(--light-font);
   text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
+  padding: 10px 25px;
+  border-radius: 1px 15px;
   /* width of the border, type, color */
   border-bottom: 2px solid var(--bottom-border);
-  transition-duration: 0.2s;
+  transition-duration: 0.5s;
   transition-property: opacity;
 }
 
@@ -102,17 +104,24 @@ button:focus,
   opacity: 0.8;
 }
 
+.button__secondary {
+  background: #9acd32;
+  color: #000;
+}
+
 /* header on all pages, includes the logo and the navbar */
 .page-header {
   display: flex;
   position: fixed;
-  background-color: var(--background-color);
+  top: 0;
+  background-color: #f7e6d4;
   border-bottom: 1px solid var(--bottom-border);
   max-width: 2500px;
   /* only added max-width value because the exericse assumed it was added already - change it later */
   margin: auto;
   width: 100%;
-  padding: 20px;
+  height: 60px;
+  z-index: 100;
 }
 
 .page-header__item {
@@ -121,15 +130,15 @@ button:focus,
 
 /* logo specs */
 .page-header__item:first-child {
-  padding: 10px;
-  height: 130px;
+  padding-left: 20px;
+  height: 50px;
 }
 
 /* navbar specs */
 .page-header__item:last-child {
   flex-grow: 1;
   text-align: right;
-  padding-top: 15px;
+  padding-top: 5px;
   padding-right: 15px;
 }
 
@@ -172,7 +181,7 @@ button:focus,
 .about {
   max-width: 700px;
   margin: 0 auto;
-  padding-top: 200px;
+  padding-top: 80px;
   padding-left: var(--padding-left);
   padding-right: var(--padding-right);
 }
@@ -225,16 +234,6 @@ table.experience td, table.experience th {
   }
 }
 
-
-/* this is the order of the animation properties:
-.sun {
-  animation-duration: 4s;
-  animation-name: color-change;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
-} */
-
 .sun {
   animation: 4s color-change infinite alternate linear;
 }
@@ -269,31 +268,41 @@ table.experience td, table.experience th {
 .work {
   max-width: 1500px;
   margin: 0 auto;
-  padding-top: 200px;
+  padding-top: 80px;
   padding-left: var(--padding-left);
   padding-right: var(--padding-right);
 }
 
+.edge {
+  padding-top: 80px;
+}
+
+
 /* from contact.html*/
+/*
 .contact-form {
   max-width: 700px;
   margin: 0 auto;
   padding: 50px;
   padding-top: 200px;
   background-color: var(--contact-background);
-}
+}*/
 
+/*
 .contact-form * {
   width: 100%;
 }
+*/
 
 .contact-details{
   max-width: 700px;
   margin: 0 auto;
   padding: 50px;
+  padding-top: 80px;
   text-align: center;
   vertical-align: middle;
 }
+
 
 /* CV download section*/
 .download {
@@ -308,26 +317,41 @@ table.experience td, table.experience th {
   width: 33%;
 }
 
-/* Styling CSS grid*/
-
+/* Styling grid */
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
 }
 
+.grid h3 {
+  padding: 0;
+  margin: 0;
+  text-shadow: 1px 1px 10px #e6ffff;
+}
+
 .grid__item {
   background-color: var(--grid-color);
-  padding: 10px;
-  /* Set width to auto*/
+  padding: 10px 25px;
+  /* Set width to auto */
   width: auto;
+  border-radius: 1px 45px;
+  color: white;
+}
+
+.grid a {
+  color: #9ACD32;
 }
 
 .grid__item:last-child {
   grid-column: 3 / 3;
   grid-row: 1 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+/* Footer on all pages */
 .page-footer {
   clear: both;
   display: flex;
@@ -336,18 +360,20 @@ table.experience td, table.experience th {
   padding-top: 50px;
 }
 
-.about span {
-    padding: 2px 5px;
+.page-footer span {
+  padding: 5px 15px;
+  display: inline-block;
+  background: var(--span-color);
+  border-radius: 1px 20px;
+}
+
+.about span,
+.myself span {
+    padding: 0px 5px;
     display: inline-block;
     background: var(--span-color);
-  }
-
-/* This was marked as an error due to several IDs in a row, replaced by ".about span" - keeping #CV as it only occurs once and I'd like to remember this method
-#web {
-  padding: 2px 5px;
-  display: inline-block;
-  background: var(--span-color)
-} */
+    border-radius: 1px 15px;
+}
 
 #CV {
   color: var(--light-font);
