--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 
 :root {
-  --primary-color: #329ACD;
-  --secondary-color: #9ACD32;
-  --tertiary-color: #CD329A;
+  --primary-color: #269393;
+  --secondary-color: #e0b354;
   --bottom-border: #2b2b2b;
   --color-visited: #008080;
   --color-active: #40e0d0;
@@ -33,7 +32,7 @@ body {
   /* Sets the font size to 16px */
   line-height: 1.6;
   /* Sets the line-height to 1.6 */
-  /*background-image: linear-gradient(to right, #f2d9bf, #f7e6d4);*/
+  background-image: linear-gradient(to right, #f2d9bf, #f7e6d4);
 }
 
 /* title specs */
@@ -116,7 +115,7 @@ button:focus,
   display: flex;
   position: fixed;
   top: 0;
-  /*background-color: #f7e6d4;*/
+  background-color: #f7e6d4;
   border-bottom: 1px solid var(--bottom-border);
   max-width: 2500px;
   /* only added max-width value because the exericse assumed it was added already - change it later */
@@ -165,16 +164,6 @@ button:focus,
   margin-right: 40px;
   margin-left: 40px;
   border-radius: 50%;
-}
-
-.project__picture{
-  float: right;
-  max-width: 550px;
-  height: auto;
-  margin-right: 40px;
-  margin-left: 40px;
-  border: 1px solid grey;
-  border-radius: 10%;
 }
 
 .profile {
@@ -285,20 +274,6 @@ table.experience td, table.experience th {
   padding-right: var(--padding-right);
 }
 
-.project {
-  max-width: 1500px;
-  margin: 0 auto;
-  padding-top: 80px;
-  padding-left: var(--padding-left);
-  padding-right: var(--padding-right);
-}
-
-
-
-
-
-
-
 .edge {
   padding-top: 80px;
 }
@@ -371,7 +346,7 @@ table.experience td, table.experience th {
 
 .grid__item:last-child {
   grid-column: 3 / 3;
-  grid-row: 1 / 4;
+  grid-row: 1 / 3;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -407,8 +382,7 @@ table.experience td, table.experience th {
 
 /* text under profile picture */
 @media all and (max-width: 650px) {
-  .profile__portrait,
-  .project__picture {
+  .profile__portrait {
     display: block;
     width: 100%;
     max-width: 100%;
