--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ a.button {
   background-color: var(--primary-color);
   margin: auto;
   width: 100%;
-  height: 60px;
+  height: 50px;
   z-index: 100;
 }
 
@@ -245,6 +245,7 @@ background: none;
 .skills-tools {
   margin: 0 auto;
   margin-bottom: 80px;
+  margin-top: 40px;
 }
 
 b {
@@ -352,7 +353,7 @@ b {
 .page-footer__item {
   margin: 0 auto;
   padding-top: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
 }
 
 @media all and (max-width: 650px) {
