--- a/css/styles.css
+++ b/css/styles.css
@@ -408,6 +408,12 @@ span.emoji {
     margin: 0 auto;
     padding: 30px;
   }
+
+  .profile,
+  .about {
+    max-width: 90%;
+    margin-bottom: 70px;
+  }
 }
 
 /* Grid items on small screens */
@@ -435,5 +441,40 @@ span.emoji {
 
   h1 {
     font-size: 22px;
+  }
+}
+
+@media all and (max-width: 560px) {
+  .page-header {
+    font-size: 10px;
+  }
+
+  .page-header__item:first-child {
+    padding-left: 5px;
+    margin-top: 10px;
+    max-width: 150px;
+    height: auto;
+    margin: auto;
+  }
+
+  .page-footer {
+    height: 7%;
+  }
+
+  .page-footer__item {
+    margin-top: 5px;
+    margin-bottom: 15px;
+  }
+}
+
+@media all and (max-width: 300px) {
+  .page-header {
+    font-size: 10px;
+  }
+
+  .page-header__item:first-child {
+    max-width: 100px;
+    margin-left: 10px;
+    margin-top: 7%;
   }
 }
