--- a/css/styles.css
+++ b/css/styles.css
@@ -54,56 +54,6 @@ a:focus {
   cursor: pointer;
 }
 
-/* Navigation links */
-.page-header a {
-  color: var(--light-font);
-  text-decoration: none;
-  position: relative;
-  z-index: 0;
-  cursor: pointer;
-  padding-left: 10px;
-  padding-bottom: 3px;
-  padding-top: 2px;
-}
-
-/* Slidy animation on links */
-.lineSlide a:before {
-  position: absolute;
-  width: 1px;
-  height: 100%;
-  left: 0px;
-  top: 0px;
-  content: '';
-  background: white;
-  opacity: 0.3;
-  transition: all 0.4s;
-}
-
-.lineSlide a:hover:before {
-  width: 110%;
-}
-
-.logo {
-  margin-top: 5px;
-}
-
-/*
-.page-header a:hover,
-.page-header a:focus {
-  text-decoration: none;
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-.page-header a:visited {
-  color: var(--light-font);
-}
-
-.page-header a:active {
-  color: var(--active-color);
-}
-*/
-
 /* Buttons */
 .button, button {
   border: none;
@@ -132,51 +82,116 @@ a.button {
   color: white;
 }
 
-/* Header/navbar */
-.page-header {
+/* NEW NAVBAR */
+nav {
   display: flex;
-  position: fixed;
-  top: 0;
-  background-color: var(--primary-color);
-  margin: auto;
   width: 100%;
-  height: 60px;
-  z-index: 100;
+  position: fixed;
+  justify-content: space-around;
+  align-items: center;
+  height: 7vh;
+  background-color: var(--primary-color);
 }
 
-.page-header__item {
-  flex: 0 1 200px;
+.logo {
+  max-width: 55%;
+  max-height: 90%;
 }
 
-/* Logo specs */
-.page-header__item:first-child {
-  padding-left: 10px;
-  height: 50px;
+.nav-links {
+  display: flex;
+  width: 40%;
+  justify-content: space-around;
 }
 
-/* Other navbar items */
-.page-header__item:last-child {
-  flex-grow: 1;
-  text-align: right;
-  padding-top: 5px;
-  padding-right: 15px;
+.nav-links a {
+  color: var(--light-font);
+  text-decoration: none;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 16px;
 }
 
-a.navigation-list {
-  color: var(--secondary-color);
-}
-
-.navigation-list {
+.nav-links li {
   list-style-type: none;
 }
 
-.navigation-list li {
-  display: inline-block;
-  margin-left: 15px;
+.active_link{
+  font-weight: bold;;
 }
 
-.navigation-list__item--active {
-  font-weight: 700;
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+.burger div{
+  width: 25px;
+  height: 3px;
+  background-color: rgb(223, 219, 219);
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 1024) {
+  .nav-links {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .nav-links {
+    position: absolute;
+    right: 0px;    
+    height: 92vh; 
+    top: 3vh;
+    background-color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .burger {
+    display: block;
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
 }
 
 b {
@@ -212,7 +227,7 @@ span {
 
 /* index.html */
 .profile {
-  max-width: 60%;
+  max-width: 80%;
   margin: 0 auto;
   padding-top: 10%;
   padding-right: 10px;
@@ -326,10 +341,6 @@ span.emoji {
   padding-right: var(--padding-right);
 }
 
-.edge {
-  padding-top: 80px;
-}
-
 /* Grid fallback*/
 .grid__item {
   display: inline-block;
@@ -417,11 +428,14 @@ span.emoji {
 
 /* contact.html */
 .contact-form {
-  margin-top: 80px;
   text-align: center;
   border-radius: 5px;
   padding: 20px;
   display: block;
+}
+
+.contact-form h1 {  
+  margin-top: 80px;
 }
 
 form {
@@ -480,7 +494,7 @@ label {
 
 /* Media queries */
 /* Pictures on small screens */
-@media all and (max-width: 650px) {
+@media all and (max-width: 768px) {
   .profile__portrait,
   .project__picture,
   .berlin-illustration {
@@ -531,18 +545,6 @@ label {
 }
 
 @media all and (max-width: 560px) {
-  .page-header {
-    font-size: 10px;
-  }
-
-  .page-header__item:first-child {
-    padding-left: 5px;
-    margin-top: 10px;
-    max-width: 150px;
-    height: auto;
-    margin: auto;
-  }
-
   .page-footer {
     height: 7%;
   }
@@ -550,17 +552,5 @@ label {
   .page-footer__item {
     margin-top: 5px;
     margin-bottom: 15px;
-  }
-}
-
-@media all and (max-width: 300px) {
-  .page-header {
-    font-size: 10px;
-  }
-
-  .page-header__item:first-child {
-    max-width: 100px;
-    margin-left: 10px;
-    margin-top: 7%;
   }
 }
