Burger menu fix
Contact link was cut off

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ nav {
 .nav-links {
   display: flex;
   width: 40%;
-  justify-content: space-around;
+  /*justify-content: space-around;*/
 }
 
 .nav-links a {
@@ -132,11 +132,8 @@ nav {
 }
 
 .nav-links li {
-  list-style-type: none;
-}
-
-.active_link{
-  font-weight: bold;;
+  list-style-type: none;  
+  margin-top: 6vh;
 }
 
 .burger {
@@ -212,6 +209,44 @@ transform: rotate(-45deg) translate(-5px, 6px);
 .toggle .line3 {
   transform: rotate(45deg) translate(-5px, -6px);
 }
+
+
+/* Nav link animation on big screens */
+@media screen and (min-width: 1232px) {
+  ul.container {
+    margin: 0 auto;
+    padding: 10em 3em;
+    text-align: center;
+  }
+  
+  ul.container a {
+    color: #FFF;
+    text-decoration: none;
+    margin: 0px 10px;
+    padding: 10px 10px;
+    position: relative;
+    z-index: 0;
+    cursor: pointer;
+  }
+  
+  /* Pull right  */
+  ul.pullRight a:before {
+    position: absolute;
+    width: 2px;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    content: '';
+    background: #FFF;
+    opacity: 0.3;
+    transition: all 0.3s;
+  }
+  
+  ul.pullRight a:hover:before {
+    width: 100%;
+  }
+}
+
 
 b {
   text-decoration: underline;
