--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ nav {
 .nav-links {
   display: flex;
   width: 40%;
-  /*justify-content: space-around;*/
+  justify-content: space-around;
 }
 
 .nav-links a {
@@ -132,8 +132,11 @@ nav {
 }
 
 .nav-links li {
-  list-style-type: none;  
-  margin-top: 6vh;
+  list-style-type: none;
+}
+
+.active_link{
+  font-weight: bold;;
 }
 
 .burger {
@@ -168,6 +171,8 @@ nav {
     background-color: var(--primary-color);
     display: flex;
     flex-direction: column;
+    justify-content: start;
+    padding-top: 30px;
     align-items: center;
     width: 50%;
     transform: translateX(100%);
@@ -176,6 +181,7 @@ nav {
 
   .nav-links li {
     opacity: 0;
+    margin-bottom: 30px;
   }
 
   .burger {
