--- a/css/styles.css
+++ b/css/styles.css
@@ -108,13 +108,13 @@ nav {
   position: fixed;
   justify-content: space-around;
   align-items: center;
-  height: 7vh;
+  height: 40px;
   background-color: var(--primary-color);
 }
 
 .logo {
-  max-width: 55%;
   max-height: 90%;
+  margin-left: 10px;
 }
 
 .nav-links {
@@ -133,10 +133,6 @@ nav {
 
 .nav-links li {
   list-style-type: none;
-}
-
-.active_link{
-  font-weight: bold;;
 }
 
 .burger {
@@ -166,8 +162,8 @@ nav {
   .nav-links {
     position: absolute;
     right: 0px;    
-    height: 92vh; 
-    top: 3vh;
+    height: 93vh; 
+    top: 2vh;
     background-color: var(--primary-color);
     display: flex;
     flex-direction: column;
@@ -239,9 +235,9 @@ transform: rotate(-45deg) translate(-5px, 6px);
   ul.pullRight a:before {
     position: absolute;
     width: 2px;
-    height: 100%;
+    height: 70%;
     left: 0px;
-    top: 0px;
+    top: 6px;
     content: '';
     background: #FFF;
     opacity: 0.3;
@@ -249,10 +245,9 @@ transform: rotate(-45deg) translate(-5px, 6px);
   }
   
   ul.pullRight a:hover:before {
-    width: 100%;
+    width: 110%;
   }
 }
-
 
 b {
   text-decoration: underline;
@@ -274,7 +269,7 @@ span {
   background-color: var(--primary-color);
   margin: auto;
   width: 100%;
-  height: 4%;
+  height: 40px;
   z-index: 100;
 }
 
@@ -282,7 +277,7 @@ span {
 .page-footer__item {
   margin: 0 auto;
   padding-top: 5px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 
 /* index.html */
@@ -604,13 +599,12 @@ label {
   }
 }
 
-@media all and (max-width: 560px) {
-  .page-footer {
-    height: 7%;
+@media all and (max-width: 300px) {
+  .logo {
+    max-width: 70%;
   }
 
-  .page-footer__item {
-    margin-top: 5px;
-    margin-bottom: 15px;
+  .nav-links {
+    width: 100%;
   }
 }
