--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ nav {
   display: flex;
   width: 100%;
   position: fixed;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 40px;
   background-color: var(--primary-color);
@@ -119,8 +119,7 @@ nav {
 
 .nav-links {
   display: flex;
-  width: 40%;
-  justify-content: space-around;
+  justify-content: space-around;  
 }
 
 .nav-links a {
@@ -137,6 +136,7 @@ nav {
 .burger {
   display: none;
   cursor: pointer;
+  margin-right: 15px;
 }
 
 .burger div{
@@ -147,26 +147,21 @@ nav {
   transition: all 0.3s ease;
 }
 
-@media screen and (max-width: 1024) {
-  .nav-links {
-    width: 40%;
-  }
-}
-
+/* Hamburger menu */
 @media screen and (max-width: 768px) {
   body {
     overflow-x: hidden;
   }
-
+  
   .nav-links {
     position: absolute;
     right: 0px;    
-    height: 93vh; 
-    top: 2vh;
+    height: 96vh; 
+    top: 1vh;
     background-color: var(--primary-color);
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     padding-top: 30px;
     align-items: center;
     width: 50%;
@@ -174,13 +169,22 @@ nav {
     transition: transform 0.5s ease-in;
   }
 
+  .logo {  
+    z-index: 90;
+  }
+
+  .nav-links a {
+    font-size: 22px;
+  }
+
   .nav-links li {
     opacity: 0;
-    margin-bottom: 30px;
+    margin-bottom: 80px;
   }
 
   .burger {
     display: block;
+    z-index: 100;
   }
 }
 
@@ -211,16 +215,15 @@ transform: rotate(-45deg) translate(-5px, 6px);
   transform: rotate(45deg) translate(-5px, -6px);
 }
 
-
 /* Nav link animation on big screens */
-@media screen and (min-width: 1232px) {
-  ul.container {
+@media screen and (min-width: 769px) {
+  .nav-links {
     margin: 0 auto;
     padding: 10em 3em;
     text-align: center;
-  }
-  
-  ul.container a {
+  } 
+
+  .nav-links a {
     color: #FFF;
     text-decoration: none;
     margin: 0px 10px;
@@ -231,7 +234,7 @@ transform: rotate(-45deg) translate(-5px, 6px);
   }
   
   /* Pull right  */
-  ul.pullRight a:before {
+  .nav-links a:before {
     position: absolute;
     width: 2px;
     height: 70%;
@@ -243,7 +246,7 @@ transform: rotate(-45deg) translate(-5px, 6px);
     transition: all 0.3s;
   }
   
-  ul.pullRight a:hover:before {
+  .nav-links a:hover:before {
     width: 110%;
   }
 }
@@ -351,8 +354,9 @@ span {
   float: left;
   max-width: 250px;
   height: auto;
-  margin-right: 40px;
-  margin-left: 40px;
+  margin-top: 5px;
+  margin-right: 15px;
+  margin-left: 0px;
   border-radius: 50%;
 }
 
@@ -452,16 +456,17 @@ span.emoji {
   padding-left: var(--padding-left);
   padding-right: var(--padding-right);
   padding-bottom: 80px;
+  text-align: justify;
 }
 
 .project__picture {
   float: right;
-  max-width: 550px;
+  max-width: 500px;
   height: auto;
   margin-right: 40px;
   margin-left: 40px;
   border: 1px solid grey;
-  border-radius: 10%;
+  border-radius: 30px;
 }
 
 .project-description ul {
@@ -548,15 +553,23 @@ label {
 
 /* Media queries */
 /* Pictures on small screens */
-@media all and (max-width: 768px) {
-  .profile__portrait,
+@media all and (max-width: 768px) {  
   .project__picture,
   .berlin-illustration {
     display: block;
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
+  }
+
+  .berlin-illustration {
     padding: 30px;
+  }
+
+  .profile__portrait {
+    display: block;
+    max-width: 90%;
+    margin-bottom: 10px;
   }
 
   .profile,
@@ -565,6 +578,7 @@ label {
     margin-bottom: 70px;
   }
 }
+
 
 /* Grid items on small screens */
 @media all and (max-width: 500px) {
