--- a/css/styles.css
+++ b/css/styles.css
@@ -89,20 +89,6 @@ strong {
   font-weight: var(--fw-bold) 
 }
 
-/* Sections - general */
-section {
-  padding: 5em 2em;
-}
-
-.section__title {
-  margin-bottom: .25em;
-}
-
-.section__subtitle {
-  margin: 0;
-  font-size: var(--fs-h3);
-}
-
 /* Images */ 
 img {
   display: block;
@@ -289,6 +275,80 @@ transform: rotate(-45deg) translate(-5px, 6px);
 
 
 
+/* Sections - general */
+section {
+  padding: 5em 2em;
+}
+
+/* Titles and subtitles */
+.section__title {
+  margin-bottom: .25em;
+}
+
+.section__subtitle {
+  margin: 0;
+  font-size: var(--fs-h3);
+}
+
+.section__title--intro {
+  font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong {
+  display: block;
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+  background: var(--clr-accent);
+  padding: .25em 1em;
+  font-family: var(--ff-secondary);
+  margin-bottom: 1em;  
+}
+
+
+/* INTRO SECTION */
+.intro {
+  position: relative;
+}
+
+.intro__img {
+  box-shadow: var(--bs);
+}
+
+.section__subtitle--intro {
+  display: inline-block;
+}
+
+@media (min-width: 600px) {
+  .intro {
+    display: grid;
+    width: min-content;
+    margin: 0 auto;
+    grid-column-gap: 1em;
+    grid-template-areas:
+      "img title"
+      "img subtitle";
+      grid-template-columns: min-content max-content;
+  }
+
+  .intro__img {
+    grid-area: img;
+    min-width: 250px;
+    position: relative;
+    z-index: 2;
+  }
+
+  .section__subtitle--intro {
+    align-self: start;
+    grid-column: -1 / 1;
+    grid-row: 2;
+    text-align: right;
+    position: relative;
+    left: -1.5em;
+    width: calc(100% + 1.5em);
+  }
+}
 
 
 
