--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,54 @@ section {
 }
 
 
+/* SERVICES SECTION */
+.my-services {
+  background-color: var(--clr-dark);
+  background-image: url(../img/services-bg.jpg); /* Src: https://unsplash.com/photos/MSN8TFhJ0is */
+  background-size: cover;
+  background-position: right 35% bottom 45%;
+  background-blend-mode: multiply;
+  color: var(--clr-light);
+  text-align: center;  
+}
 
+.section__title--services {
+  color: var(--clr-accent);
+  position: relative;
+}
+
+.section__title--services::after {
+  content: '';
+  display: block;
+  width: 2em;
+  height: 1px;
+  margin: 0.5em auto 1em;
+  /*background: currentColor;*/  
+  background: var(--clr-light);
+  opacity: 0.25;
+}
+
+.services {
+  margin-bottom: 4em;
+}
+
+.service {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+@media (min-width: 800px) {
+  .services {
+    display: flex;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .service + .service {
+    margin-left: 4em;
+  }
+}
 
 
 
