--- a/css/styles.css
+++ b/css/styles.css
@@ -400,8 +400,6 @@ section {
   }
 }
 
-
-
 /* ABOUT ME SECTION */
 .about-me {
   max-width: 1000px;
@@ -444,7 +442,47 @@ section {
   }
 }
 
+/* MY WORK SECTION */
+.my-work {
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+  text-align: center;
+}
 
+.section__subtitle--work {
+  color: var(--clr-accent);
+  font-weight: var(--fw-bold);
+  margin-bottom: 1em;
+}
+
+.portfolio {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  /*max-width: 1200px;
+  margin: 0 auto;*/
+}
+
+.portfolio__item {
+  background: var(--clr-accent);
+  overflow: hidden;
+}
+
+.portfolio__img {
+  transition: 
+    transform 750ms cubic-bezier(.5, 0, .5, 1),
+    opacity 250ms linear;
+}
+
+.portfolio__item:focus {
+  position:relative;
+  z-index: 2;
+}
+
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+  transform: scale(1.2);
+  opacity: .5;
+}
 
 
 
