--- a/css/styles.css
+++ b/css/styles.css
@@ -93,24 +93,22 @@ strong {
 img {
   display: block;
   max-width: 100%;
+  z-index: 1;
 }
 
 /* Styling the scrollbar */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 10px;
 }
 ::-webkit-scrollbar-track {
-  background: var(--clr-light); 
+  background: var(--clr-dark); 
 }
 
 ::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  background: var(--clr-accent); 
-}
-
-::-webkit-scrollbar-thumb:window-inactive {
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
   background: var(--clr-dark); 
+  border: 3px solid var(--clr-accent);
 }
 
 /* NAVBAR */
@@ -118,32 +116,33 @@ nav {
   display: flex;
   width: 100%;
   position: fixed;
-  justify-content: space-between;
+  justify-content: space-around;
+  /* Centering vertically */
   align-items: center;
-  height: 40px;
-  background-color: var(--primary-color);
+  height: 45px;
+  background-color: var(--clr-dark);
+  z-index: 2;
 }
 
 .logo {
-  max-width: 100px;
+  max-width: 2em;
   margin-left: 10px;
-  margin-top: 30px;
   border-radius: 50%;
 }
 
 .nav-links {
   display: flex;
-  justify-content: space-around;  
+  justify-content: space-between;
 }
 
 .nav-links a {
-  color: var(--clr-accent);
+  color: var(--clr-light);
   text-decoration: none;
   letter-spacing: 1px;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
-.nav-links li {
+.nav-links li {  
   list-style-type: none;
 }
 
@@ -156,7 +155,7 @@ nav {
 .burger div{
   width: 25px;
   height: 3px;
-  background-color: rgb(223, 219, 219);
+  background-color: var(--clr-accent);
   margin: 5px;
   transition: all 0.3s ease;
 }
@@ -166,11 +165,11 @@ nav {
   body {
     overflow-x: hidden;
   }
-  
+
   .nav-links {
     position: absolute;
     right: 0px;    
-    height: 96vh; 
+    height: 98vh; 
     top: 1vh;
     background-color: var(--clr-dark);
     display: flex;
@@ -184,11 +183,17 @@ nav {
   }
 
   .logo {  
-    z-index: 90;
+    z-index: 2;
+    position: absolute;
+    left: 0;
   }
 
   .nav-links a {
-    font-size: 22px;
+    font-size: 16px;
+  }
+
+  .nav-links li:first-child {
+    margin-top: 30px;
   }
 
   .nav-links li {
@@ -198,7 +203,9 @@ nav {
 
   .burger {
     display: block;
-    z-index: 100;
+    z-index: 2;
+    position: absolute;
+    right: 0;
   }
 }
 
@@ -233,13 +240,16 @@ transform: rotate(-45deg) translate(-5px, 6px);
 /* Nav link animation on big screens */
 @media screen and (min-width: 769px) {
   .nav-links {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
     margin: 0 auto;
-    padding: 10em 3em;
+    padding: 10em 1em;
     text-align: center;
   } 
 
   .nav-links a {
-    color: #FFF;
+    color: var(--clr-light);
     text-decoration: none;
     margin: 0px 10px;
     padding: 10px 10px;
@@ -256,7 +266,7 @@ transform: rotate(-45deg) translate(-5px, 6px);
     left: 0px;
     top: 6px;
     content: '';
-    background: #FFF;
+    background: var(--clr-light);
     opacity: 0.3;
     transition: all 0.3s;
   }
@@ -269,11 +279,17 @@ transform: rotate(-45deg) translate(-5px, 6px);
 /* Sections - general */
 section {
   padding: 5em 2em;
+  z-index: -2;
+}
+
+h2 {  
+  z-index: -1;
 }
 
 /* Titles and subtitles */
 .section__title {
   margin-bottom: .25em;
+  z-index: 1;
 }
 
 .section__subtitle {
@@ -316,6 +332,7 @@ section {
   .intro {    
     margin-left: auto;
     margin-right: auto;
+    top: 40px;
     padding: 2em;
     max-width: 100%;  
     align-items: center;    
@@ -335,6 +352,10 @@ section {
     max-width: 80%;    
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .intro__img {
+    margin-bottom: 2em;
   }
 
   .section__title {      
@@ -463,7 +484,6 @@ section {
   .about-me__img {
     grid-area: img;
     position: relative;
-    z-index: 2;
   }
 }
 
